--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.1.1
   intl: ^0.17.0
+  rxdart: ^0.27.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
